<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/settings_lifeStoryLines"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="0dp"
                android:textSize="7pt"
                android:text="@string/settings_lifeStoryLines"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/settings_lifeStoryLinesExplain"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_height="20dp"
                android:layout_marginTop="3dp"
                android:text="@string/settings_lifeStoryLinesExplain"
                android:textSize="5pt"/>


        </LinearLayout>

        <Switch
            android:id="@+id/settings_lifeStoryLinesSwitch"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingRight="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/settings_familyTreeLines"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="0dp"
                android:textSize="7pt"
                android:text="@string/settings_familyTreeLines"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/settings_familyTreeLinesExplain"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_height="20dp"
                android:layout_marginTop="3dp"
                android:text="@string/settings_familyTreeLinesExplain"
                android:textSize="5pt"/>


        </LinearLayout>

        <Switch
            android:id="@+id/settings_familyTreeLinesSwitch"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingRight="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/settings_spouseLines"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="0dp"
                android:textSize="7pt"
                android:text="@string/settings_spouseLines"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/settings_spouseLinesExplain"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_height="20dp"
                android:layout_marginTop="3dp"
                android:text="@string/settings_spouseLinesExplain"
                android:textSize="5pt"/>


        </LinearLayout>

        <Switch
            android:id="@+id/settings_spouseLinesSwitch"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingRight="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/settings_fathersSide"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="0dp"
                android:textSize="7pt"
                android:text="@string/settings_fathersSide"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/settings_fathersSidesExplain"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_height="20dp"
                android:layout_marginTop="3dp"
                android:text="@string/settings_fathersSideExplain"
                android:textSize="5pt"/>


        </LinearLayout>

        <Switch
            android:id="@+id/settings_fathersSideSwitch"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingRight="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/settings_mothersSide"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="0dp"
                android:textSize="7pt"
                android:text="@string/settings_mothersSide"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/settings_mothersSideExplain"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_height="20dp"
                android:layout_marginTop="3dp"
                android:text="@string/settings_mothersSideExplain"
                android:textSize="5pt"/>


        </LinearLayout>

        <Switch
            android:id="@+id/settings_mothersSideSwitch"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingRight="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/settings_maleEvents"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="0dp"
                android:textSize="7pt"
                android:text="@string/settings_maleEvents"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/settings_maleEventsExplain"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_height="20dp"
                android:layout_marginTop="3dp"
                android:text="@string/settings_maleEventsExplain"
                android:textSize="5pt"/>


        </LinearLayout>

        <Switch
            android:id="@+id/settings_maleEventsSwitch"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingRight="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/settings_femaleEvents"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="0dp"
                android:textSize="7pt"
                android:text="@string/settings_femaleEvents"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/settings_femaleEventsExplain"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_height="20dp"
                android:layout_marginTop="3dp"
                android:text="@string/settings_femaileEventsExplain"
                android:textSize="5pt"/>


        </LinearLayout>

        <Switch
            android:id="@+id/settings_femaleEventsSwitch"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingRight="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"/>

    <LinearLayout
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/settings_logout"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="0dp"
                android:textSize="7pt"
                android:text="@string/settings_logout"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/settings_logoutExplain"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_height="20dp"
                android:layout_marginTop="3dp"
                android:text="@string/settings_logoutsExplain"
                android:textSize="5pt"/>


        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"/>


</LinearLayout>

