<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    
    <TextView
        android:id="@+id/person_firstName"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="0dp"
        android:textSize="8pt"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/person_firstNameLabel"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_height="20dp"
        android:layout_marginTop="3dp"
        android:text="@string/first_name"
        android:textSize="5pt"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"/>
    <TextView
        android:id="@+id/person_lastName"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_height="20dp"
        android:textSize="8pt"

        android:layout_marginTop="3dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/person_lastNameLabel"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_height="20dp"
        android:layout_marginTop="3dp"
        android:textSize="5pt"
        android:text="@string/last_name"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"/>
    <TextView
        android:id="@+id/person_gender"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_height="20dp"
        android:textSize="8pt"
        android:layout_marginTop="3dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/person_genderLabel"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textSize="5pt"
        android:layout_height="20dp"
        android:layout_marginTop="3dp"
        android:text="@string/gender"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"/>

    <ExpandableListView
        android:id="@+id/person_expandableListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


</LinearLayout>